5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1642_869.log
== TEST (2019-06-26 16:24:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cp= float(input("digite preco:"))
pmp= 200.0
if(cp>=pmp):
	print(cp-5//100)
else:
	print(cp)
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:25:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cp= float(input("digite preco:"))
pmp= 200.0
if(cp>=pmp):
	print(cp-(cp*5//100))
else:
	print(cp)
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:25:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cp= float(input("digite preco:"))
pmp= 200.0
if(cp>=pmp):
	print(cp-(cp*5//100))
else:
	print(cp)
-- EXECUTION TIME:
0.686609
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:25:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cp= float(input("digite preco:"))
pmp= 200.0
if(cp>=pmp):
	print(cp-(cp*5//100))
else:
	print(cp)
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:26:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cp= float(input("digite preco:"))
pmp= 200.0
if(cp>=pmp):
	print(round(cp-(cp*5//100), 2)
else:
	print(round(cp), 2)
-- EXECUTION TIME:
0.845226
-- ERROR:
  File "/home/codebench/codes/1642/869/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:26:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cp= float(input("digite preco:"))
pmp= 200.0
if(cp>=pmp):
	print(round(cp-(cp*5//100), 2)
else:
	print(round(cp), 2)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:27:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cp= float(input("digite preco:"))
pmp= 200.0
if(cp>=pmp):
	print(round(cp-(cp*5//100), 2)
else:
	print(cp)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
